# openclaw

./: .gitignore  .gitmodules  APPListWidget.cpp  Account.h  AccountListDialog.h  AesCrypto.h  AesCryptoWasm.cpp  AppListWidget.h  AppSettingsDialog.h  BitMaskEditorDialog.h  CMakeLists.txt  CenterAlignDelegate.h  ClickableLabel.h  Definitions.hpp  DeviceConnection.cpp  DeviceConnection.h  DeviceInfo.cpp  DeviceInfo.h  DeviceManager.h  DeviceView.cpp  DeviceView.h  DeviceWidget.cpp  DeviceWidget.h  DeviceWindow.cpp  DeviceWindow.h  EmojiIconProvider.h  EventHub.cpp  EventHub.h  ExplicitSelectionListWidget.h  FileTransfer.h  FileViewer.h  FlowEditorDialog.h  FlowModels.hpp  HttpUtil.h  Info.plist  JailbreakAssistantDialog.h  KeyMapping.h  LiveStreamDevice.h  LogTextBrowser.h  LogWindow.h  (+54 more)
.github/workflows/: ci.yml  trojan-proxy.yml
android/: AndroidManifest.xml  build.gradle  build_ffmpeg_android.sh  release.keystore
android/openssl_4.0.0_arm64-v8a/include/openssl/: configuration.h
android/res/values/: styles.xml
behaviors/: ViewportAwareBehavior.h
certs/: development.p12  embedded.mobileprovision
cmake/: android-symbols.map  qt-meta-obfuscate.py
dialogs/: AccountListDialog.h  AppSettingsDialog.h  BaseDialog.h  BitMaskEditorDialog.h  DeveloperTools.h  ElementHierarchyDialog.h  HelpDialog.h  ImageToolsDialog.h  JailbreakAssistantDialog.h  NetworkSegmentEditorDialog.h  PrefsConfigEditorDialog.h  QrConnectDialog.h  RedeemRecordDialog.h  RenewalDialog.h  ScreenshotGalleryDialog.h  SettingsViewer.h  SourceRepoDialog.h  SwapExpirationDialog.h  VersionManagerDialog.h  VideoGalleryDialog.h
fastlane/: Fastfile
icons/: logo.icns
ios/: Info.plist  build_ffmpeg_xcframework.sh
macOS/: Info.plist  package_app.sh
macOS/libimobiledevice-glue/lib/: libimobiledevice-glue-1.0.0.dylib  libimobiledevice-glue-1.0.la
macOS/libimobiledevice-glue/lib/pkgconfig/: libimobiledevice-glue-1.0.pc
macOS/libimobiledevice/lib/: libimobiledevice-1.0.6.dylib  libimobiledevice-1.0.la
macOS/libimobiledevice/lib/pkgconfig/: libimobiledevice-1.0.pc
macOS/libplist/lib/: libplist++-2.0.4.dylib  libplist++-2.0.la  libplist-2.0.4.dylib  libplist-2.0.la
macOS/libplist/lib/pkgconfig/: libplist++-2.0.pc  libplist-2.0.pc
macOS/libusbmuxd/lib/: libusbmuxd-2.0.7.dylib  libusbmuxd-2.0.dylib  libusbmuxd-2.0.la
macOS/libusbmuxd/lib/pkgconfig/: libusbmuxd-2.0.pc
mingw64/ffmpeg/include/libavutil/: ffversion.h
mingw64/ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
mingw64/libimobiledevice-glue/lib/: libimobiledevice-glue-1.0.la
mingw64/libimobiledevice/lib/: libimobiledevice-1.0.la
mingw64/libimobiledevice/lib/pkgconfig/: libimobiledevice-1.0.pc
mingw64/libplist/lib/: libplist++-2.0.la  libplist-2.0.la
mingw64/libplist/lib/pkgconfig/: libplist++-2.0.pc  libplist-2.0.pc
mingw64/libusbmuxd/lib/: libusbmuxd-2.0.la
mingw64/libusbmuxd/lib/pkgconfig/: libusbmuxd-2.0.pc
tools/: LambdaEventFilter.h
visualscripting/: Definitions.hpp  FlowEditorDialog.h  FlowModels.hpp  PureDataModels.hpp
